# Probana

./: abi.json
XMTP_agent/: docker-compose.yml  pyproject.toml
backend/: package-lock.json  package.json  xmtp.js
contract/: main.sol
flowsubgraph/: abi.json  subgraph.yaml
flowsubgraph/my-subgraph/: networks.json  schema.graphql  subgraph.yaml
flowsubgraph/my-subgraph/abis/: Probana.json
flowsubgraph/my-subgraph/src/: probana.ts
flowsubgraph/my-subgraph/tests/: probana-utils.ts
flowsubgraph/tests/: probana-utils.ts  probana.test.ts
my-subgraph/: networks.json  schema.graphql  subgraph.yaml
my-subgraph/abis/: Probana.json
my-subgraph/src/: probana.ts
my-subgraph/tests/: probana-utils.ts
probana/: networks.json  package-lock.json  schema.graphql  subgraph.yaml
probana-frontend/: package-lock.json  package.json
probana-frontend/app/: globals.css  marketDetails.js  page.js
probana-frontend/app/[market]/: page.js
probana-frontend/app/components/: Spinner.js  Spinner.module.css  abi.json  approveSpending.js  getNFTs.js  market.js  marketGrid.js  navbar.js  orderbookUI.js  unlimitOverlay.js
probana-frontend/app/nba/: MomentChecker.module.css  page.js
probana-frontend/app/orders/: page.js
probana-frontend/app/unlimit/: page.js
probana-frontend/config_flow/: fcl.ts
probana-substream/: package.json
probana/src/: probana.ts
subgraph/: networks.json  package.json  subgraph.yaml
subgraph/abis/: Probana.json
subgraph/probana/: networks.json  package.json  schema.graphql  subgraph.yaml
subgraph/tests/: probana.test.ts
(+5 files in other folders)
